# icfp-2022

./: .env
arturs/: .gitignore  README  lispify.sh  main.lisp  run.sh  submit-result  submit-results
arturs/genetic-run/result/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
arturs/input/: 2.lisp  21.lisp  27.lisp  3.lisp  32.lisp  9.lisp
arturs/mosaic-run/: scores.txt
arturs/mosaic-run/result/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  (+8 more)
off/slugger/: Rocket.toml
problems/: best-results.txt
problems/scripts/: Makefile  get-best-results.py
rust/: Cargo.toml  Makefile
rust/blocks/: Cargo.toml
rust/compadre/: Cargo.toml
rust/kleksis/: Cargo.toml  bacon.toml
rust/kleksis/src/: app.rs  lib.rs  main.rs
rust/mosaic/: .gitignore  Cargo.toml  submission.isl  t  uf
rust/parser/: Cargo.toml
rust/plotter/: Cargo.toml
rust/rastaman/: Cargo.toml
rust/rastaman/src/: app.rs  classify.rs  lib.rs  main.rs  rasterize.rs
rust/slugger/: .env  sqlx-data.json
slugger/: Cargo.toml  Rocket.toml
slugger/src/: main.rs
solutions/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  5.txt  6.txt  7.txt  8.txt  9.txt
(+10 files in other folders)
